configured authentication provider

--- a/Springsecurity/src/main/resources/application.properties
+++ b/Springsecurity/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=${SPRING_APP_NAME:Springsecurity}
 
+spring.config.import = application_prod.properties
+spring.profiles.active = prod
+
+
 #spring.security.user.name=${SECURITY_USERNAME:tharun}
 #spring.security.user.password=${SECURITY_PASSWORD:8129}
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
