--- a/Springsecurity/src/main/resources/application_prod.properties
+++ b/Springsecurity/src/main/resources/application_prod.properties
@@ -1,15 +1,15 @@
+spring.config.activate.on-profile= prod
 spring.application.name=${SPRING_APP_NAME:Springsecurity}
 
 #spring.security.user.name=${SECURITY_USERNAME:tharun}
 #spring.security.user.password=${SECURITY_PASSWORD:8129}
-logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
+logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:ERROR}
 
 logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.show-sql=${JPA_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:false}
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
