--- a/Springsecurity/src/main/resources/application.properties
+++ b/Springsecurity/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.datasource.password=postgres
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
 
+springdoc.api-docs.path=/api-docs
+
