--- a/Springsecurity/src/main/resources/application_prod.properties
+++ b/Springsecurity/src/main/resources/application_prod.properties
@@ -12,4 +12,4 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:false}
-
+springdoc.api-docs.path=/api-docs
